test-generator/tests/snapshots/rust/test_generated_union_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
union TestUnion { field5: i32 }

AST:
(source_file
  (union_item
    name: (type_identifier "TestUnion")
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier "field5")
        type: (primitive_type "i32")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "TestUnion",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
